--- a/templates/input_MID.html
+++ b/templates/input_MID.html
@@ -26,10 +26,10 @@
  
     
     <label for="body_type">Body Type:</label><br>
-    <input type="object" id=skill_moves"body_type" name="body_type" value="Messi"><br><br>
+    <input type="object" id="body_type" name="body_type" value="Messi"><br><br>
     
-    <label for="preferred_foot	">preferred_foot:</label><br>
-    <input type="int" id="preferred_foot" name="preferred_foot" value="1"><br><br>
+    <label for="preferred_foot">preferred_foot:</label><br>
+    <input type="object" id="preferred_foot" name="preferred_foot" value="Right"><br><br>
     
     <label for="attacking_short_passing	">attacking_short_passing	:</label><br>
     <input type="int" id="attacking_short_passing	" name="attacking_short_passing" value="60"><br><br>
@@ -41,7 +41,7 @@
 
     <label for="skill_ball_control">skill_ball_control:</label><br>
     <input type="int" id="skill_ball_control" name="skill_ball_control" value="60"><br><br>
-    <label for="Movement Reactions">Movement Reactions:</label><br>
+    <label for="movement_reactions">Movement Reactions:</label><br>
     <input type="int" id="movement_reactions" name="movement_reactions" value="60"><br><br>
     
     
