--- a/static/style.css
+++ b/static/style.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: 'Arial', sans-serif;
-    background-image: url('background_image.jpeg');
+    background-image: url('image.jpeg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
