--- a/templates/input_DEF.html
+++ b/templates/input_DEF.html
@@ -31,7 +31,7 @@
 
     <label for="skill_ball_control">skill_ball_control:</label>
     <input type="int" id="skill_ball_control" name="skill_ball_control" value="60"><br>
-    <label for="movement Reactions">Movement Reactions:</label>
+    <label for="movement_reactions">Movement Reactions:</label>
     <input type="int" id="movement_reactions" name="movement_reactions" value="60"><br>
     
     <label for="mentality_interceptions">mentality_interceptions:</label>
