--- a/templates/input_FW.html
+++ b/templates/input_FW.html
@@ -26,7 +26,7 @@
     
     
     <label for="body_type">Body Type:</label><br>
-    <input type="int" id=skill_moves"body_type" name="body_type" value="1"><br><br>
+    <input type="int" id="body_type" name="body_type" value="1"><br><br>
     
     
     
@@ -38,7 +38,7 @@
 
     <label for="skill_ball_control">skill_ball_control:</label><br>
     <input type="int" id="skill_ball_control" name="skill_ball_control" value="60"><br><br>
-    <label for="Movement Reactions">Movement Reactions:</label><br>
+    <label for="movement_reactions">Movement Reactions:</label><br>
     <input type="int" id="movement_reactions" name="movement_reactions" value="60"><br><br>
     
     <label for="power_shot_power">power_shot_power:</label><br>
