--- a/templates/input_GK.html
+++ b/templates/input_GK.html
@@ -21,7 +21,7 @@
     <input type="int" id="movement_reactions" name="movement_reactions" value="60"><br><br>
     <label for="power_shot_power">power_shot_power:</label><br>
     <input type="int" id="power_shot_power" name="power_shot_power" value="60"><br><br>
-    <label for="GK attribute">GK attribute:</label><br>
+    <label for="GK_attribute">GK attribute:</label><br>
     <input type="int" id="GK_attribute" name="GK_attribute" value="340"><br><br>
     <input type="submit" value="Submit">
   </form>
