--- a/templates/input_GK.html
+++ b/templates/input_GK.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1> Goal_Keeper Player Characteristics</h1>
-<form action="/prediction" method="post">
+<form action="/prediction_GK" method="post">
     <label for="league_rank">League_Rank:</label><br>
     <input type="int" id="league_rank" name="league_rank" value="1"><br>
     <label for="international_reputation">International_Reputation:</label><br>
@@ -21,7 +21,7 @@
     <input type="int" id="movement_reactions" name="movement_reactions" value="60"><br><br>
     <label for="power_shot_power">power_shot_power:</label><br>
     <input type="int" id="power_shot_power" name="power_shot_power" value="60"><br><br>
-    <label for="GK_attribute">GK attribute:</label><br>
+    <label for="GK_attribute">GK_attribute:</label><br>
     <input type="int" id="GK_attribute" name="GK_attribute" value="340"><br><br>
     <input type="submit" value="Submit">
   </form>
