--- a/templates/input_MID.html
+++ b/templates/input_MID.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>Mid field Player Characteristics</h1>
-<form action="/prediction" method="post">
+<form action="/prediction_MID" method="post">
     
     <label for="league_rank">League_Rank:</label>
     <input type="float" id="league_rank" name="league_rank" value="1.0"><br>
@@ -22,7 +22,7 @@
     <input type="int" id="skill_moves" name="skill_moves" value="1"><br><br>
 
     <label for="work_rate">work_rate:</label><br>
-    <input type="object" id="work_rate" name="work_rate" value="Medium/Low"><br><br>
+    <input type="object" id="work_rate" name="work_rate" value="Medium/Medium"><br><br>
  
     
     <label for="body_type">Body Type:</label><br>
